# jetson_dla_tutorial

./: CMakeLists.txt  README.md  README_ORI.md  infer.cpp  infer.py  models.py
resnet50/: build.py  export_onnx.py  infer.py  prepare_calib_from_coco.py
